prepare.sh, optimizations, javaopts