@@ -1,4 +1,4 @@
-#!/bin/sh
+#!/bin/bash
 #
 #  Copyright 2023 The original authors
 #
@@ -15,7 +15,9 @@
 #  limitations under the License.
 #
 
+source "$HOME/.sdkman/bin/sdkman-init.sh"
+#sdk use java 21.0.2-open 1>&2
+#sdk use java 21.0.2-oracle 1>&2
+#sdk use java 21.0.1-tem 1>&2
+sdk use java 21.0.2-graal 1>&2
 
-#JAVA_OPTS="-agentpath:/usr/lib/async-profiler/build/libasyncProfiler.so=start,event=cpu,file=profile.html --enable-preview"
-JAVA_OPTS="--enable-preview -XX:+UseZGC -XX:+ZGenerational"
-java $JAVA_OPTS --class-path target/average-1.0.0-SNAPSHOT.jar dev.morling.onebrc.CalculateAverage_michaljonko
